<resources>
    <!--    Список покупок-->
    <string name="app_name">AndroidCourseStepik</string>
    <string name="select_app">Выберите приложение</string>
    <string name="add_shop_item">Добавить покупку</string>
    <string name="shopping_list">Список покупок</string>
    <string name="save">Сохранить</string>
    <string name="name">Название</string>
    <string name="count">Количество</string>
    <string name="error_input_name">Ошибка ввода названия</string>
    <string name="error_input_count">Ошибка ввода количества</string>
    <string name="edit_item_saved">Изменения сохранены</string>
    <string name="add_new_item">Новый элемент добавлен</string>
    <string name="description_shopping_app">Приложение для добавления покупок в список. Можно удалять, изменять состояние и редактировать покупку.</string>

    <!--    Состав числа-->
    <string name="the_number">Состав числа</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="continue_text">Продолжить</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Нормальный</string>
    <string name="hard_level">Тяжелый</string>
    <string name="question_mark">\?</string>
    <string name="progress_answers">Правильных ответов %d (минимум %d)</string>
    <string name="score_answers">Ваш счет: %d</string>
    <string name="score_percentage">Процент правильных ответов: %d</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %d из %d необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %d</string>
    <string name="required_score">Необходимое количество правильных ответов: %d</string>
    <string name="description_the_number_app">Приложение-игра. Дается результат суммы чисел и одно из слагаемых. Нужно выбрать из предложенных вариантов второе слагаемое.</string>

    <!--    Корутины-->
    <string name="coroutine">Корутины</string>
    <string name="download">Загрузить</string>
    <string name="city">Город:</string>
    <string name="temperature">Температура:</string>
    <string name="loading_temperature_toast">Загрузка температуры для города: %s</string>
    <string name="description_coroutine_app">Тестовое приложение. По клику кнопки симулирует загрузку данных в фоне.</string>

    <!--    Сервисы-->
    <string name="services">Сервисы</string>
    <string name="service">Service</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="intent_service">Intent Service</string>
    <string name="job_scheduler">Job Scheduler</string>
    <string name="job_intent_service">Job Intent Service</string>
    <string name="alarm_manager">Alarm Manager</string>
    <string name="work_manager">Work Manager</string>
    <string name="description_service_app">Набор реализаций отображения различных сервисов.</string>

    <!--    Crypto App-->
    <string name="crypto">Криптовалюты</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Цена:</string>
    <string name="min_price_label">Минимум за день:</string>
    <string name="max_price_label">Максимум за день:</string>
    <string name="last_market_label">Последняя сделка:</string>
    <string name="last_updated_label">Обновлено:</string>
    <string name="description_crypto_app">Приложение отображает курс различных криптовалют. Список обновляется каждые 10 секунд. По клику на валюту открывается окно детальной информации о валюте, так же с обновлением раз в 10 секунд.</string>

    <!--    Broadcast Receiver-->
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="description_broadcast_receiver">Приложение для изучения Broadcast Receiver - это класс в Android, который позволяет приложениям получать уведомления о системных событиях или событиях, создаваемых (другими )приложениями.</string>
    <string name="load_broadcast_receiver">Выполнить загрузку</string>
    <string name="description_app_work">Приложение реагирует на включение/отключение режима В самолете и низкий заряд батареи отображая уведомление внизу экрана. Кнопка имитирует загрузку данных через BroadcastReceiver, отображая прогресс.</string>

    <!--    Content Provider-->
    <string name="content_provider">Content Provider</string>
    <string name="description_content_provider">Приложение для практики работы с Content Provider</string>
    <string name="description_work_content_provider_app">Приложение запрашивает различные разрешения у системы. Например, чтение контактов</string>

    <!--    Factorial Calculate-->
    <string name="factorial_calculate">Факториал числа</string>
    <string name="description_factorial_calculate">Приложение для рассчета факториала числа. Пример - факториал числа 3: 1*2*3=6</string>
    <string name="calculate">Рассчитать</string>

    <!--    Flow App-->
    <string name="flow_app">Flow</string>
    <string name="description_flow_app">Приложение для изучения Flow</string>
    <string name="add_user">Add user</string>
    <string name="enter_username">Enter username:</string>
    <string name="users_activity">Users Activity</string>
    <string name="launch_next_screen">Launch next screen</string>
    <string name="currency_price">$%s</string>
    <string name="crypto_activity">Crypto Activity</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="team_score_activity">Team Score Activity</string>
    <string name="default_score">0</string>

</resources>