<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/DescriptionTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Каждые 3 секунды внизу экрана будет появляться уведомление:" />

    <Button
        android:id="@+id/simple_service"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service" />

    <TextView
        style="@style/DescriptionTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="В шторке отобразиться уведомление:" />

    <Button
        android:id="@+id/foreground_service"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service" />

    <TextView
        style="@style/DescriptionTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="В шторке отобразиться уведомление:" />

    <Button
        android:id="@+id/intent_service"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_service" />

    <TextView
        style="@style/DescriptionTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Каждые 2 секунды внизу экрана будет появляться уведомление если на устройстве включен Wi-Fi и оно заряжается:" />

    <Button
        android:id="@+id/job_scheduler"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_scheduler" />

    <Button
        android:id="@+id/job_intent_service"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_intent_service" />

    <Button
        android:id="@+id/alarm_manager"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_manager" />

    <Button
        android:id="@+id/work_manager"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_manager" />

</LinearLayout>